scroll-behavior: smooth

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -52,6 +52,7 @@ import { ViewTransitions } from 'astro:transitions';
 
     background-color: var(--background-color);
     color: var(--text-color);
+    scroll-behavior: smooth;
   }
   ::selection {
     color: white;
