Mejorando el feedback al no encontrar nigún programa con la barra de búsqueda

--- a/src/components/FeaturedPrograms.astro
+++ b/src/components/FeaturedPrograms.astro
@@ -43,7 +43,7 @@ import SearchBtn from "./Search-btn.astro";
 
       // Comprueba si el resultado la busqueda retorna algun valor
       if (response.length < 1) {
-        alert("nada para ti")
+        alert("No se ha encontrado ningún programa con ese nombre...")
         return
       }
       console.log(response);
