Prueba esta focus

--- a/src/components/Search-btn.astro
+++ b/src/components/Search-btn.astro
@@ -13,6 +13,7 @@
     const inputElement = document.querySelector("#input") as HTMLInputElement;
     inputElement.classList.add("widthInput");
     inputElement.focus()
+    console.log("esta focus")
     
   });
   //Sale el mouse
