--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,6 +16,7 @@ import { ViewTransitions } from 'astro:transitions';
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="google-site-verification" content="hzbJZ4KQX_hvr8hMcKMdm5PNV71vwFUSSmTcx7zjmh4" />
     <title>{title}</title>
     <ViewTransitions/>
   </head>
