--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,8 +12,9 @@ import { ViewTransitions } from 'astro:transitions';
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="Programas, Utilidades, Scripts, Juegos, encuentralos y subelos en segundos con soft-share.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Software, Subir, Descargar, Donwload, Upload, Share">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <meta name="google-site-verification" content="hzbJZ4KQX_hvr8hMcKMdm5PNV71vwFUSSmTcx7zjmh4" />
