--- a/src/components/UploadProgram.astro
+++ b/src/components/UploadProgram.astro
@@ -79,7 +79,8 @@ import Layout from "../layouts/Layout.astro";
       // Obtener los valores del formulario
       const nombre = document.getElementById("nombre").value;
       const link_de_imagen = document.getElementById("link_de_imagen").value;
-      const link_de_descarga = document.getElementById("link_de_descarga").value;
+      const link_de_descarga =
+        document.getElementById("link_de_descarga").value;
       const detalles = document.getElementById("detalles").value;
 
       const userValuesArray = [
@@ -112,24 +113,38 @@ import Layout from "../layouts/Layout.astro";
         "Soft-Share ya tiene un soft con ese link de descarga😵",
         "Soft-Share ya tiene un soft con esos detalles😵",
       ];
-
       for (let i = 0; i < userValuesArray.length; i++) {
+        // Para cada input del usuario hacer ->
+
+        // Si algún dato de la base de datos coincide con algún dato suministrado por el usuario, retornara un error y se cancelara la subida del recurso.
         if (arrayFinal.includes(userValuesArray[i])) {
-          const errorEl = document.getElementById("error-message")
-          const errorFather = document.getElementById("error-father")
-          errorFather.style.display = "flex"
-          errorEl.innerText = `${respuestas[i]}`
-          console.log(`Ha falldo ${respuestas[i]}`);
-          return
+          // Considerar si lo repetido es una imagen permitida para repetir varias veces, somo lo sería el logo de los archivos .iso .exe .bat .cmd
+
+          const repetitiveImagesAllowed =
+            "https://2.bp.blogspot.com/-IWs9wvWmHQg/Xu4aReIqOzI/AAAAAAAAYCI/DQrCgJ05TZcRBxgsMYTkY0Vm7lRITsG0wCLcBGAsYHQ/s1600/UltraISO%2BPremium%2BEdition.png";
+
+
+            // Si no encuentra la imagen del usuario dentro de las imagenes permitidas, prosigue con el error de dato repetido.
+          if (!userValuesArray[i].includes(repetitiveImagesAllowed)) {
+            const errorEl = document.getElementById("error-message");
+            const errorFather = document.getElementById("error-father");
+            errorFather.style.display = "flex";
+            errorEl.innerText = `${respuestas[i]}`;
+            console.log(`Ha falldo ${respuestas[i]}`);
+            return;
+          } else {
+            console.log("Imagen repetida permitida");
+          }
+
         } else {
-          const errorFather = document.getElementById("error-father")
-          errorFather.style.display = "none"
-          const successEl = document.getElementById("success-message")
-          const successFather = document.getElementById("success-father")
-          successEl.innerText = "El programa se a guardado con éxito ✅"
-          successFather.style.display = "flex"
+          const errorFather = document.getElementById("error-father");
+          errorFather.style.display = "none";
+          const successEl = document.getElementById("success-message");
+          const successFather = document.getElementById("success-father");
+          successEl.innerText = "El programa se a guardado con éxito ✅";
+          successFather.style.display = "flex";
           setTimeout(() => {
-            successFather.style.display = "none"
+            successFather.style.display = "none";
           }, 3000);
         }
       }
@@ -162,31 +177,30 @@ import Layout from "../layouts/Layout.astro";
   }
 
   a {
-  position: fixed;
-  top: 1px;
-  left: 1px;
-  align-items: center;
-	font-size: 0.8rem;
-	font-weight: bold;
-  padding: 6px 14px;
-  border-radius: 6px;
-  color: var(--text-color);
-  border: none;
-  box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-	transition: box-shadow 0.3s ease;
-  text-decoration: none;
-  backdrop-filter: blur(10px);
-	
+    position: fixed;
+    top: 1px;
+    left: 1px;
+    align-items: center;
+    font-size: 0.8rem;
+    font-weight: bold;
+    padding: 6px 14px;
+    border-radius: 6px;
+    color: var(--text-color);
+    border: none;
+    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    transition: box-shadow 0.3s ease;
+    text-decoration: none;
+    backdrop-filter: blur(10px);
 
-	&:hover {
-		box-shadow: 0px	1px 10px 1px  rgba(0, 0, 0, 0.1);
-    text-decoration: underline;
-		cursor: pointer;
-	}}
-
+    &:hover {
+      box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.1);
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
 
   .hola {
     height: 200px;
