Corriendo un error de typos

--- a/src/components/Search-btn.astro
+++ b/src/components/Search-btn.astro
@@ -8,7 +8,7 @@
 <script>
   function configurarListeners() {
     const btnElement = document.getElementById("btn");
-    const inputElement = document.getElementById("input");
+    const inputElement = document.getElementById("input") as HTMLInputElement ;
 
     if (!btnElement || !inputElement) return;
 
