--- a/src/components/Search-btn.astro
+++ b/src/components/Search-btn.astro
@@ -6,6 +6,7 @@
 </div>
 
 <script>
+  // Todo el JavaScript de este componente tiene el objetivo único de aplicarse la éstitica necesaria
   function configurarListeners() {
     const btnElement = document.getElementById("btn");
     const inputElement = document.getElementById("input") as HTMLInputElement ;
