--- a/src/components/FeaturedPrograms.astro
+++ b/src/components/FeaturedPrograms.astro
@@ -78,10 +78,8 @@ import SearchBtn from "./Search-btn.astro";
     const response = await sql`SELECT * FROM programas
 ORDER BY nombre ASC`;
 
-    const programList = document.getElementById("programList");
-
     // Actualiza el contenido del contenedor con los nuevos programas
-    programList.innerHTML = response
+    document.getElementById("programList").innerHTML = response
       .map(
         (programa) => `
           <div class="div-container">
