Problema de espacio del program list solucionado.

--- a/src/components/FeaturedPrograms.astro
+++ b/src/components/FeaturedPrograms.astro
@@ -52,6 +52,7 @@ import SearchBtn from "./Search-btn.astro";
 
   const article = programList.querySelector("article");
       programList.style.display = "flex";
+      programList.style.width = "100%";
       programList.style.flexDirection = "column";
       programList.style.alignSelf = "center";
       programList.style.placeSelf = "center";
