Cambio gramatical en not found

--- a/src/components/FeaturedPrograms.astro
+++ b/src/components/FeaturedPrograms.astro
@@ -47,7 +47,7 @@ import SearchBtn from "./Search-btn.astro";
     if (response.length < 1) {
       document.getElementById("programList").innerHTML = `
       <article>
-         <h4>No se han encontrado resultados para su búsqueda.</h4> 
+         <h4>No se han encontrado resultados para tú búsqueda.</h4> 
          <p>Puede volver a cargar todos los programas con el botón *Todos los programas🚀*</p>
       </article>
       `;
