--- a/src/components/SuccessAlert.astro
+++ b/src/components/SuccessAlert.astro
@@ -12,7 +12,7 @@
   </svg>
   <span class="sr-only">Info</span>
   <div>
-    <span class="font-medium">Error:</span>
+    <span class="font-medium">Mensaje:</span>
     <span id="success-message"></span>
   </div>
 </div>
