Cambio de ruta para el favicon 1

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import { ViewTransitions } from 'astro:transitions';
     <meta name="description" content="Programas, Utilidades, Scripts, Juegos, encuentralos y subelos en segundos con soft-share.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Software, Subir, Descargar, Donwload, Upload, Share">
-    <link rel="icon" type="image/x-icon" href="/public/Windows_98.ico" />
+    <link data-default-icon="/Windows_98.ico" rel="shortcut icon" href="/Windows_98.ico" />
     <meta name="generator" content={Astro.generator} />
     <meta name="google-site-verification" content="hzbJZ4KQX_hvr8hMcKMdm5PNV71vwFUSSmTcx7zjmh4" />
     <title>{title}</title>
