Cambiando el title del index 2.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Alert from "../components/Alert.astro";
 import SuccessAlert from "../components/SuccessAlert.astro";
 ---
 
-<Layout title="Soft-Share">
+<Layout title="Soft-Share - Repositorio de tus programas.">
   <Alert />
   <SuccessAlert />
   <main>
