Arreglando un h1 del index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import SuccessAlert from "../components/SuccessAlert.astro";
   <Alert />
   <SuccessAlert />
   <main>
-    <h1>Soft-Share - Repositorio De Tus Programas</h1>
+    <h1>Soft-Share</h1>
     <p class="presentation">
       Encuentra una variedad de herramientas informáticas, desde aplicaciones
       completas hasta scripts útiles. <font color="008f39" >Comparte</font> tus propios programas con la
