--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ import { ViewTransitions } from "astro:transitions";
       content="Software, Subir, Descargar, Donwload, Upload, Share"
     />
     <!-- Logo - https://realfavicongenerator.net -->
-    <link rel="icon" type="image/png" href="/logo.png" sizes="512x512" />
+    <link rel="icon" href="/a5.svg" type="image/svg+xml" sizes="512x512">
     <!-- End Logo -->
     <meta name="apple-mobile-web-app-title" content="Soft-Share page" />
     <link rel="manifest" href="/logo.png/site.webmanifest" />
